--- a/fortnite_image/test-display.html
+++ b/fortnite_image/test-display.html
@@ -7,7 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Fortnite</h1>
+  <h1>
+    <span class="headers">Fortnite Item Shop</span>
+    <span class="headers">{date}</span>
+    <span class="headers">Shop Items {len(data_to_save)} ({new_items} New Items)</span>
+    <p class="description">
+      <span>check</span>
+      <span>mate</span>
+    </p>
+  </h1>
 
   <section>
     <div>
@@ -51,7 +59,9 @@
       <p>hello<br /> hello there</p>
     </div>
     <div>
-      <img src="./sample_image.jpg" alt="sam" />
+      <img class="absolute-t-img" src="https://cdn2.unrealengine.com/t-ui-sparksdefault-1920x1080-3b9ea5db2c81.jpg" alt="">
+
+      <img class="absolute-img" src="./sample_image.jpg" alt="sam" />
       <p>hello<br /> <span class="price"><img class="v-bucks-logo" src="./v-bucks.jpg" alt=""> hello there</span></p>
     </div>
   </section>
