--- a/fortnite_image/test-display.html
+++ b/fortnite_image/test-display.html
@@ -59,10 +59,11 @@
       <p>hello<br /> hello there</p>
     </div>
     <div>
-      <img class="absolute-t-img" src="https://cdn2.unrealengine.com/t-ui-sparksdefault-1920x1080-3b9ea5db2c81.jpg" alt="">
-
-      <img class="absolute-img" src="./sample_image.jpg" alt="sam" />
-      <p>hello<br /> <span class="price"><img class="v-bucks-logo" src="./v-bucks.jpg" alt=""> hello there</span></p>
+      <img src="./sample_image.jpg" alt="sam" />
+      <p class="description">
+        <span>hello</span>
+        <span class="price"><span>there</span><span>money</span></span>
+      </p>
     </div>
   </section>
 </body>
